--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -93,3 +93,6 @@ ACTION_SCAFFOLD_CREATION=Generate Scaffold Application
 ADD_DYNAMIC_PROPERTY_SELECT_ATTRIBUTE=Select Attributes to add Dynamic Properties
 WIZARD_REGISTER_MOCKS_TITLE=Register Mocks
 WIZARD_SELECT_MOCKS_TO_REGISTER=Select Mocks to Register
+WIZARD_CREATE_NEWONE=Configure New convention.dicon for Mock From production config.
+WIZARD_OUTPUT_FILE=Output File
+WIZARD_COPYFROM_FILE=Copy From
