--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -59,6 +59,8 @@ PREFERENCE_SOURCE_PATH=SourcePath
 PREFERENCE_RESOURCE_PATH=ResourcePath
 PREFERENCE_WEB_SERVER=WebServer
 BROWSE=Bro&wse...
+MODIFY=Modify...
+DELETE=Delete...
 PACKAGE_SELECTION=Package Selection
 PACKAGE_SELECTION_DESC=&Choose a folder:
 PACKAGE_SELECTION_EMPTY=Cannot find packages to select.
