--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -71,7 +71,7 @@ JPA_ASSOCIATION_DIALOG_CASCADE=cascade :
 JPA_ASSOCIATION_DIALOG_FETCH=fetch :
 JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
-REFRESH=Refresh...
+REFRESH=&Refresh...
 LOAD_FROM_PROJECT=Load From Project...
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
 WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
