--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -47,6 +47,7 @@ COLUMN_JAVA_CLASS=Class Name
 COLUMN_FIELD_NAME=Field Name
 PREFERENCE_USE_DOLTENG=Use Dolteng
 PREFERENCE_USE_S2DAO=Use S2Dao
+PREFERENCE_VIEW_TYPE=View Type :
 PREFERENCE_DAO_TYPE=Dao Type :
 PREFERENCE_USE_PAGE_MARKER=Use Page Marker
 PREFERENCE_USE_DI_MARKER=Use DI Marker
