--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry exported="true" kind="lib" path="template/jars/poi-2.5.1-final-20040804.jar"/>
 	<classpathentry kind="lib" path="template/jars/fuzzyxml-0.0.9.jar" sourcepath="template/jars/sources/fuzzyxml-0.0.9-sources.zip"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/commons-jxpath-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/freemarker-2.3.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/freemarker-2.3.8.jar" sourcepath="/freemarker-2.3.8/src"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/h2-2006-11-03.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/javassist-3.4.ga.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/s2-extension-2.4.8.jar"/>
