--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -59,6 +59,7 @@ PREFERENCE_ORM_XML_PATH=OrmXmlPath
 PREFERENCE_SOURCE_PATH=SourcePath
 PREFERENCE_RESOURCE_PATH=ResourcePath
 PREFERENCE_WEB_SERVER=WebServer
+PREFERENCE_FLEX_SRC_FOLDER=Flex Source Path
 BROWSE=Bro&wse...
 MODIFY=Modify...
 DELETE=Delete...
