--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,10 @@
 	<classpathentry exported="true" kind="lib" path="template/jars/s2-extension-2.4.8.jar"/>
 	<classpathentry kind="lib" path="template/jars/s2-framework-2.4.8.jar" sourcepath="/seasar2/s2-framework/src/main/java"/>
 	<classpathentry kind="lib" path="template/jars/junit-3.8.2.jar"/>
+	<classpathentry kind="lib" path="template/jars/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="template/jars/antlr-20070101.jar"/>
+	<classpathentry kind="lib" path="template/jars/metaas-0.5.jar" sourcepath="template/jars/sources/metaas-0.5-sources.jar"/>
+	<classpathentry kind="lib" path="template/jars/stringtemplate-2.3b9.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="target/classes"/>
