--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,11 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                plugin_ja.properties,\
                template/,\
-               icons/
+               icons/,\
+               template/jars/metaas-0.5.jar,\
+               template/jars/antlr-2.7.6.jar,\
+               template/jars/antlr-20070101.jar,\
+               template/jars/stringtemplate-2.3b9.jar
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/
 src.includes = plugin.properties,\
