--- a/plugin.xml
+++ b/plugin.xml
@@ -354,6 +354,11 @@
                label="Add S2Flex2 Service"
                menubarPath="org.seasar.dolteng.eclipse.viewer.mxml.menu/additions"/>
          <action
+               class="org.seasar.dolteng.eclipse.action.AddBindingAction"
+               id="org.seasar.dolteng.eclipse.mxml.AddBindingAction"
+               label="Add Binding Elements"
+               menubarPath="org.seasar.dolteng.eclipse.viewer.mxml.menu/additions"/>
+         <action
                class="org.seasar.dolteng.eclipse.action.NewAMFServiceAction"
                enablesFor="1"
                icon="icons/newclass_wiz.gif"
